update:neog projects done

--- a/project.html
+++ b/project.html
@@ -28,15 +28,18 @@
         </div>
       </section>
       <section>
-          <!-- Profit Loss Calculator -->
+        <!-- Profit Loss Calculator -->
         <article class="container container-center">
           <h3>Stockecker (Stock's Position Checker )</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark14 NeoGCamp</strong></small>
           <p>
-            How's my stocks performing? This app checks the current position of your stock
-            according to how many stock quantity you bought and its
-            initial buying price. If you don't know current price, absolutely no problem just enter the stock name and current price will come automatically. Isn't it fun? Click on the live project and check how your stocks are performing.
+            How's my stocks performing? This app checks the current position of
+            your stock according to how many stock quantity you bought and its
+            initial buying price. If you don't know current price, absolutely no
+            problem just enter the stock name and current price will come
+            automatically. Isn't it fun? Click on the live project and check how
+            your stocks are performing.
           </p>
           <p>
             <span> <strong>Tech stack :</strong> </span>
@@ -54,13 +57,16 @@
             >
           </div>
         </article>
-          <!-- Is your birthday palindrome? -->
+        <!-- Is your birthday palindrome? -->
         <article class="container container-center">
           <h3>Is your Birthday a Palindrome?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark13 NeoGCamp</strong></small>
           <p>
-            Do you know a palindrome date? This app takes your birthdate and checks whether it is a palindrome date or not. If not then it will tell you the nearest one. Looks interesting, right? Click on the live project to check whether your birthday is a palindrome or not.
+            Do you know a palindrome date? This app takes your birthdate and
+            checks whether it is a palindrome date or not. If not then it will
+            tell you the nearest one. Looks interesting, right? Click on the
+            live project to check whether your birthday is a palindrome or not.
           </p>
           <p>
             <span> <strong>Tech stack :</strong> </span>
@@ -78,13 +84,17 @@
             >
           </div>
         </article>
-          <!-- Fun with Triangles -->
+        <!-- Fun with Triangles -->
         <article class="container container-center">
           <h3>Fun With Triangles?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark12 NeoGCamp</strong></small>
           <p>
-           How much do you know about triangles? Take the quiz on triangles and check out your knowledge about triangles. You can also check whehther the given angles can form the triangle or not. And you can also calculate the hypotenuse as well as area of right angled triange.
+            How much do you know about triangles? Take the quiz on triangles and
+            check out your knowledge about triangles. You can also check
+            whehther the given angles can form the triangle or not. And you can
+            also calculate the hypotenuse as well as area of right angled
+            triange.
           </p>
           <p>
             <span> <strong>Tech stack :</strong> </span>
@@ -102,13 +112,17 @@
             >
           </div>
         </article>
-          <!-- Is your birthdate lucky? -->
+        <!-- Is your birthdate lucky? -->
         <article class="container container-center">
           <h3>Is your Birthdate Lucky?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark11 NeoGCamp</strong></small>
           <p>
-           Do you have lucky birthdate? This app will tell you, how lucky your birthdate is! Interesting, isn't it? This app takes user birthdate and lucky number and based on that it tells you, whether your birthday is lucky for you or not. Click on live project to check it out? 
+            Do you have lucky birthdate? This app will tell you, how lucky your
+            birthdate is! Interesting, isn't it? This app takes user birthdate
+            and lucky number and based on that it tells you, whether your
+            birthday is lucky for you or not. Click on live project to check it
+            out?
           </p>
           <p>
             <span> <strong>Tech stack :</strong> </span>
@@ -126,13 +140,15 @@
             >
           </div>
         </article>
-          <!-- cash counter -->
+        <!-- cash counter -->
         <article class="container container-center">
           <h3>Cash Counter</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark10 NeoGCamp</strong></small>
           <p>
-           Dealing with change problem? This app will tell you, how you can return a change using minimum number of notes or coins. Got a solution? Click on live project to check it out? 
+            Dealing with change problem? This app will tell you, how you can
+            return a change using minimum number of notes or coins. Got a
+            solution? Click on live project to check it out?
           </p>
           <p>
             <span> <strong>Tech stack :</strong> </span>
@@ -150,6 +166,147 @@
             >
           </div>
         </article>
+        <!-- Maharshtrian Food Recommendation -->
+        <article class="container container-center">
+          <h3>Maharshtrian Food Recommendation</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark09 NeoGCamp</strong></small>
+          <p>
+            Do you like Maharashtrian Food? I have listed here some of my
+            favourite Maharashtrian dishes in different genres. Click on the
+            live project to see which one likes you.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>ReactJs</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://t9nrk.csb.app/"><button>Live Project</button></a>
+          </div>
+          <div class="source-code-btn">
+            <a
+              href="https://github.com/rdshinde/react-food-recommendation-app.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
+        <!-- Emoji Interpreter -->
+        <article class="container container-center">
+          <h3>Hand Gesture Emoji Interpreter</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark08 NeoGCamp</strong></small>
+          <p>
+            Difficulty in finding the meaning of emojis? Enter the hand gesture
+            emoji and find out its meaning. Isn't it easy now? Click on the live
+            project and try it out.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>ReactJs</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://3d8jm.csb.app/"><button>Live Project</button></a>
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/react-emoji-interpreter.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
+        <!-- Yoda Translations -->
+        <article class="container container-center">
+            <h3>Yoda Translator</h3>
+            <small>August, 2021</small><br />
+            <small><strong>#mark07 NeoGCamp</strong></small>
+            <p>
+                You know yoda's language, do? You can translate your English text in Yoda's fun language using this app. Click on live project to translate your English text.
+            </p>
+            <p>
+              <span> <strong>Tech stack :</strong> </span>
+              Built with <strong>HTML</strong>,<strong> CSS</strong> and
+              <strong>Vanilla JS</strong>.
+            </p>
+            <div class="live-project-btn">
+              <a href="https://yoda-fun-translation.netlify.app/"
+                ><button>Live Project</button></a
+              >
+            </div>
+            <div class="source-code-btn">
+              <a href="https://github.com/rdshinde/yoda-fun-translation-app.git"
+                ><button>Source Code</button></a
+              >
+            </div>
+          </article>
+        <!-- Minion Translations -->
+        <article class="container container-center">
+            <h3>Minion Translator</h3>
+            <small>August, 2021</small><br />
+            <small><strong>#mark06 NeoGCamp</strong></small>
+            <p>
+                batooay to illzzz banana lingu? A translator which will take English text from the user as input and convert that into Minionese or banana language. Isn't it fun? Click on the live project and try it out.
+            </p>
+            <p>
+              <span> <strong>Tech stack :</strong> </span>
+              Built with <strong>HTML</strong>,<strong> CSS</strong> and
+              <strong>Vanilla JS</strong>.
+            </p>
+            <div class="live-project-btn">
+              <a href="https://minion-fun-translations.netlify.app/"
+                ><button>Live Project</button></a
+              >
+            </div>
+            <div class="source-code-btn">
+              <a href="https://github.com/rdshinde/minion-fun-translation-app.git"
+                ><button>Source Code</button></a
+              >
+            </div>
+          </article>
+        <!-- Avenger Movies Quiz -->
+        <article class="container container-center">
+            <h3>'Avenger Movies' Quiz</h3>
+            <small>August, 2021</small><br />
+            <small><strong>#mark02 NeoGCamp</strong></small>
+            <p>
+                How much do you know about The Avengers? I have a quiz for you. Click on the live project enjoy the quiz and let me know your score and I will update it in scoreboard.
+            </p>
+            <p>
+              <span> <strong>Tech stack :</strong> </span>
+              Built with <strong>nodeJs</strong>.
+            </p>
+            <div class="live-project-btn">
+              <a href="https://replit.com/@RishikeshShinde/Play-Avengers-Quiz#index.js?embed=1&output=1"
+                ><button>Live Project</button></a
+              >
+            </div>
+            <div class="source-code-btn">
+              <a href="https://github.com/rdshinde/javascript-cli-quiz-2.git"
+                ><button>Source Code</button></a
+              >
+            </div>
+          </article>
+        <!-- Do you really know me? -->
+        <article class="container container-center">
+            <h3>'Do you really know me?' Quiz</h3>
+            <small>August, 2021</small><br />
+            <small><strong>#mark01 NeoGCamp</strong></small>
+            <p>
+                Do you really know me? Let's check. I have a quiz for you. Answer the question related to me and check how much you know about me. Click on live project and try it out.
+            </p>
+            <p>
+              <span> <strong>Tech stack :</strong> </span>
+              Built with <strong>nodeJs</strong>.
+            </p>
+            <div class="live-project-btn">
+              <a href="https://replit.com/@RishikeshShinde/Do-you-know-me#index.js?embed=1&output=1"
+                ><button>Live Project</button></a
+              >
+            </div>
+            <div class="source-code-btn">
+              <a href="https://github.com/rdshinde/javascript-cli-quiz-1.git"
+                ><button>Source Code</button></a
+              >
+            </div>
+          </article>
       </section>
     </main>
     <footer>
