--- a/project.html
+++ b/project.html
@@ -215,98 +215,153 @@
         </article>
         <!-- Yoda Translations -->
         <article class="container container-center">
-            <h3>Yoda Translator</h3>
-            <small>August, 2021</small><br />
-            <small><strong>#mark07 NeoGCamp</strong></small>
-            <p>
-                You know yoda's language, do? You can translate your English text in Yoda's fun language using this app. Click on live project to translate your English text.
-            </p>
-            <p>
-              <span> <strong>Tech stack :</strong> </span>
-              Built with <strong>HTML</strong>,<strong> CSS</strong> and
-              <strong>Vanilla JS</strong>.
-            </p>
-            <div class="live-project-btn">
-              <a href="https://yoda-fun-translation.netlify.app/"
-                ><button>Live Project</button></a
-              >
-            </div>
-            <div class="source-code-btn">
-              <a href="https://github.com/rdshinde/yoda-fun-translation-app.git"
-                ><button>Source Code</button></a
-              >
-            </div>
-          </article>
+          <h3>Yoda Translator</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark07 NeoGCamp</strong></small>
+          <p>
+            You know yoda's language, do? You can translate your English text in
+            Yoda's fun language using this app. Click on live project to
+            translate your English text.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>HTML</strong>,<strong> CSS</strong> and
+            <strong>Vanilla JS</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://yoda-fun-translation.netlify.app/"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/yoda-fun-translation-app.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
         <!-- Minion Translations -->
         <article class="container container-center">
-            <h3>Minion Translator</h3>
-            <small>August, 2021</small><br />
-            <small><strong>#mark06 NeoGCamp</strong></small>
-            <p>
-                batooay to illzzz banana lingu? A translator which will take English text from the user as input and convert that into Minionese or banana language. Isn't it fun? Click on the live project and try it out.
-            </p>
-            <p>
-              <span> <strong>Tech stack :</strong> </span>
-              Built with <strong>HTML</strong>,<strong> CSS</strong> and
-              <strong>Vanilla JS</strong>.
-            </p>
-            <div class="live-project-btn">
-              <a href="https://minion-fun-translations.netlify.app/"
-                ><button>Live Project</button></a
-              >
-            </div>
-            <div class="source-code-btn">
-              <a href="https://github.com/rdshinde/minion-fun-translation-app.git"
-                ><button>Source Code</button></a
-              >
-            </div>
-          </article>
+          <h3>Minion Translator</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark06 NeoGCamp</strong></small>
+          <p>
+            batooay to illzzz banana lingu? A translator which will take English
+            text from the user as input and convert that into Minionese or
+            banana language. Isn't it fun? Click on the live project and try it
+            out.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>HTML</strong>,<strong> CSS</strong> and
+            <strong>Vanilla JS</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://minion-fun-translations.netlify.app/"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/minion-fun-translation-app.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
         <!-- Avenger Movies Quiz -->
         <article class="container container-center">
-            <h3>'Avenger Movies' Quiz</h3>
-            <small>August, 2021</small><br />
-            <small><strong>#mark02 NeoGCamp</strong></small>
-            <p>
-                How much do you know about The Avengers? I have a quiz for you. Click on the live project enjoy the quiz and let me know your score and I will update it in scoreboard.
-            </p>
-            <p>
-              <span> <strong>Tech stack :</strong> </span>
-              Built with <strong>nodeJs</strong>.
-            </p>
-            <div class="live-project-btn">
-              <a href="https://replit.com/@RishikeshShinde/Play-Avengers-Quiz#index.js?embed=1&output=1"
-                ><button>Live Project</button></a
-              >
-            </div>
-            <div class="source-code-btn">
-              <a href="https://github.com/rdshinde/javascript-cli-quiz-2.git"
-                ><button>Source Code</button></a
-              >
-            </div>
-          </article>
+          <h3>'Avenger Movies' Quiz</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark02 NeoGCamp</strong></small>
+          <p>
+            How much do you know about The Avengers? I have a quiz for you.
+            Click on the live project enjoy the quiz and let me know your score
+            and I will update it in scoreboard.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>nodeJs</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a
+              href="https://replit.com/@RishikeshShinde/Play-Avengers-Quiz#index.js?embed=1&output=1"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/javascript-cli-quiz-2.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
         <!-- Do you really know me? -->
         <article class="container container-center">
-            <h3>'Do you really know me?' Quiz</h3>
-            <small>August, 2021</small><br />
-            <small><strong>#mark01 NeoGCamp</strong></small>
-            <p>
-                Do you really know me? Let's check. I have a quiz for you. Answer the question related to me and check how much you know about me. Click on live project and try it out.
-            </p>
-            <p>
-              <span> <strong>Tech stack :</strong> </span>
-              Built with <strong>nodeJs</strong>.
-            </p>
-            <div class="live-project-btn">
-              <a href="https://replit.com/@RishikeshShinde/Do-you-know-me#index.js?embed=1&output=1"
-                ><button>Live Project</button></a
-              >
-            </div>
-            <div class="source-code-btn">
-              <a href="https://github.com/rdshinde/javascript-cli-quiz-1.git"
-                ><button>Source Code</button></a
-              >
-            </div>
-          </article>
+          <h3>'Do you really know me?' Quiz</h3>
+          <small>August, 2021</small><br />
+          <small><strong>#mark01 NeoGCamp</strong></small>
+          <p>
+            Do you really know me? Let's check. I have a quiz for you. Answer
+            the question related to me and check how much you know about me.
+            Click on live project and try it out.
+          </p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>nodeJs</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a
+              href="https://replit.com/@RishikeshShinde/Do-you-know-me#index.js?embed=1&output=1"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/javascript-cli-quiz-1.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
+        <!-- Fun Translations -->
+        <article class="container container-center">
+          <h3>Fun Translator</h3>
+          <small>August, 2021</small><br />
+          <small><strong>Minion,Yoda and Shakespere Translator</strong></small>
+          <p>Do you know fun Translations? I have an app for you to translate your English text in different fun languages. Click on live project to translate your English text.</p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>HTML</strong>,<strong> CSS</strong> and
+            <strong>Vanilla JS</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://rdshinde.github.io/fun_translator/"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/fun_translator.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
+        <!-- Rock Paper Scissors -->
+        <article class="container container-center">
+          <h3>Rock Paper Scissors</h3>
+          <small>June, 2021</small><br />
+          <small><strong>Rock-Paper-Scissors Game</strong></small>
+          <p>Do you love playing traditional Rock-Paper-Scissors game? Let's play it with computer. Click on live project and enjoy your game.</p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>HTML</strong>,<strong> CSS</strong> and
+            <strong>Vanilla JS</strong>.
+          </p>
+          <div class="live-project-btn">
+            <a href="https://rockpaperscissorslive.netlify.app/"
+              ><button>Live Project</button></a
+            >
+          </div>
+          <div class="source-code-btn">
+            <a href="https://github.com/rdshinde/rock-paper-scissors.git"
+              ><button>Source Code</button></a
+            >
+          </div>
+        </article>
       </section>
     </main>
     <footer>
